#ifndef MAINVIEW_H
#define MAINVIEW_H

class MainView {
public:
    void show();
};

#endif